- DDL and DML seperation - add document route - check eth price - integration tests - docker configs
